<resources>
    <string name="app_name" translatable="false">qqsm</string>
    <string name="api_url" translatable="false">wwtbamandroid.appspot.com</string>

    <string name="main_header">Who wants to be a millionaire</string>
    <string name="main_welcome">Welcome to Who wants to be a millionaire</string>
    <string name="main_play">Play</string>
    <string name="main_scores">Scores</string>
    <string name="main_settings">Settings</string>
    <string name="main_credits">Credits</string>

    <string name="play_header">Play</string>
    <string name="play_playfor">Play for:  </string>
    <string name="play_remaining_hints">Remaining hints:  </string>
    <string name="play_question">Question: </string>
    <string name="play_losingtitle">Oh! You have lost.</string>
    <string name="play_losingmessage">You have lost at round %1s, you win %1s$.</string>
    <string name="play_losingback">Back to menu</string>
    <string name="play_losingplayagain">Play again</string>
    <string name="play_winningtitle">End of game</string>
    <string name="play_winningmessage">You have won the game, so yo earn the million of $.</string>
    <string name="play_winningback">Back to menu</string>
    <string name="play_winningplayagain">Play again</string>
    <string name="play_surrender_title">Surrender</string>
    <string name="play_surrender_message">Are you sure you want to surrender?\nYou will earn %s$</string>
    <string name="play_call_hint">Your friend has said option %1s</string>
    <string name="play_audience_hint">The audience has said option %1s</string>
    <string name="play_menu_call_title">Call</string>
    <string name="play_menu_fifty_title">Fifty</string>
    <string name="play_menu_audience_title">Audience</string>
    <string name="play_menu_surrender_title">Surrender</string>
    <string name="play_no_internet_upload">There is no internet connection, your score cannot have been uploaded</string>
    <string name="play_upload_no_server">Sorry, our server is down, we cannot upload your score</string>
    <string name="play_upload_no_name">Sorry, we cannot be able to upload your score because you have no name</string>

    <string name="scores_header">Scores</string>
    <string name="scores_local_one_remove">The score of %s$ from %s is going to be removed</string>
    <string name="scores_local_one_remove_header">Remove one scoring</string>
    <string name="scores_no_internet_get_friends">There is no internet connection, your friend\'s score cannot have been downloaded</string>
    <string name="scores_get_friends_no_server">Sorry, our server is down, we cannot fetch your friend\'s score</string>
    <string name="scores_get_friends_no_name">Sorry, we cannot be able to fetch your friend\'s score because you have no name</string>

    <string name="settings_header">Settings</string>
    <string name="settings_name">Name:</string>
    <string name="settings_name_hint">Enter your name</string>
    <string name="settings_help">How many times can you ask for help</string>
    <string name="settings_add_friend">Add friend</string>
    <string name="settings_add_friend_hint">Enter your friend\'s mail</string>
    <string name="settings_no_internet_add_friend">There is no internet connection, your friend cannot be added</string>
    <string name="settings_no_my_name">You should introduce first your name</string>
    <string name="settings_no_friends_name">You should introduce first your friend\'s name</string>
    <string name="settings_add_friend_no_server">Sorry, our server is down, we cannot add your friend</string>
    <string name="settings_add_friend_correct">Friend added</string>


    <string name="credits_header">Credits</string>
    <string name="credits_game_name">Who wants to be a millionaire</string>
    <string name="credits_authors">Authors:</string>
    <string name="credits_author1">Adrián Munera Sánchez\n(admusan@inf.upv.es)</string>
    <string name="credits_author2">Adrián Martínez Carreres\n(admarcar@inf.upv.es)</string>

    <string name="scores_local">Local</string>
    <string name="scores_friends">Friends</string>
    <string name="scores_delete">Delete scores</string>
    <string name="scores_message">Are you sure that you want to delete ALL scores?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="currency">$</string>


</resources>
