<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/play_menu_call"
        android:title="@string/play_menu_call_title"
        android:icon="@drawable/ic_action_call"
        app:showAsAction="always" />
    <item
        android:id="@+id/play_menu_fifty"
        android:title="@string/play_menu_fifty_title"
        android:icon="@drawable/ic_action_name"
        app:showAsAction="always" />
    <item
        android:id="@+id/play_menu_audience"
        android:title="@string/play_menu_audience_title"
        android:icon="@drawable/action_people"
        app:showAsAction="always" />
    <item
        android:id="@+id/play_menu_surrender"
        android:title="@string/play_menu_surrender_title"
        android:icon="@drawable/ic_action_exit"
        app:showAsAction="always"
        />
</menu>